--- a/MonoGame.ImGuiNet/Monogame.ImGuiNet.csproj
+++ b/MonoGame.ImGuiNet/Monogame.ImGuiNet.csproj
@@ -46,8 +46,10 @@
 
     <ItemGroup>
         <PackageReference Include="ImGui.NET" Version="1.90.1.1" />
-        <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
-        <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\FNA\FNA.Core.csproj" />
     </ItemGroup>
 
     <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
